--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,10 @@
       }
     </style>
     <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/assets/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet">
     <script src="/assets/js/jquery.js"></script>
     <script src="/assets/js/bootstrap.js"></script>
+    <script src="/assets/js/jquery-ui-1.8.23.custom.min.js"></script>
   </head>
 
   <body>
@@ -46,12 +48,5 @@
      {% block content %}{% endblock %}
 
     </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/bootstrap.js"></script>
-
   </body>
 </html>
