--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -158,8 +158,8 @@ textarea {
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 16px;
+  /*line-height: 18px;*/
   color: #333333;
   background-color: #ffffff;
 }
@@ -542,7 +542,7 @@ ol {
 }
 
 li {
-  line-height: 18px;
+  /*line-height: 18px;*/
 }
 
 ul.unstyled,
