--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <script src="/assets/js/jquery.js"></script>
     <script src="/assets/js/bootstrap.js"></script>
     <script src="/assets/js/jquery-ui-1.8.23.custom.min.js"></script>
+    <script src="/assets/js/jquery.hotkeys.js"></script>
   </head>
 
   <body>
@@ -37,6 +38,8 @@
               <li><a href="/">Home</a></li>
               <li><a href="/rankings">Rankings</a></li>
               <li><a href="/matchlist">Match List</a></li>
+              <li><a href="/edit_alliances">Edit Finals Alliances</a></li>
+              <!-- <li><a href="/matchlist_generate">Generate Match List</a></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
