Final version used for BoB 2012 -- Includes patches made during the event

--- a/templates/edit_match_scoring.html
+++ b/templates/edit_match_scoring.html
@@ -136,7 +136,7 @@
 			<a href="/edit_match_scoring/{{ nextmatch }}/{{side}}" class='btn' id="nextmatch">Next Match</a>
 		{% endif %}
 
-		<a href="/edit_match_scoring/{{ currentmatch.number }}/{{otherside}}" class='btn btn-warning'>Switch Sides</a>
+		<!-- <a href="/edit_match_scoring/{{ currentmatch.number }}/{{otherside}}" class='btn btn-warning'>Switch Sides</a> -->
 
 		{% if saved %}
 			<div class='btn btn-danger' onclick="$('.scoring').show();$(this).hide(); $('.keybindings .game').show(); $('.keybindings .non-game').hide(); $('.keybindings .endgame').hide(); ">Edit Scores</div>
