--- a/templates/tv_display.html
+++ b/templates/tv_display.html
@@ -215,7 +215,7 @@ ul li{
       
       var formatted_time = "";
       var ampm = " AM";
-      var hours = formatted_time_date.getHours();
+      var hours = formatted_time_date.getHours()-1;
       var minutes = formatted_time_date.getMinutes();
 
       if(hours >= 12){
